# ChangeLog for genkernel
# Copyright 1999-2008 Gentoo Foundation; 2008 Chris Gianelloni, Andrew Gaffney
# Distributed under the GPL v2

  12 Dec 2008; Andrew Gaffney <agaffney@gentoo.org> -arch/x86/nb-busybox.cf,
  -defaults/nb-busybox.cf:
  Remove old nb-busybox.cf files that aren't used anymore

  12 Dec 2008; Andrew Gaffney <agaffney@gentoo.org> +arch/arm/busy-config,
  +arch/arm/config.sh, +arch/arm/modules_load:
  Add support for arm from armin76

  12 Dec 2008; Andrew Gaffney <agaffney@gentoo.org> arch/alpha/busy-config,
  arch/ia64/busy-config, arch/mips/busy-config, arch/parisc/busy-config,
  arch/parisc64/busy-config, arch/ppc/busy-config, arch/ppc64/busy-config,
  arch/sparc/busy-config, arch/sparc64/busy-config, arch/um/busy-config,
  arch/x86/busy-config, arch/x86_64/busy-config, defaults/busy-config:
  Enable CONFIG_MAKEDEVS in busy-config for netboot

  09 Dec 2008; Andrew Gaffney <agaffney@gentoo.org> gen_initramfs.sh:
  s/aux/luks/ for gentoo bug #250330

  07 Dec 2008; Andrew Gaffney <agaffney@gentoo.org> arch/alpha/busy-config,
  arch/ia64/busy-config, arch/mips/busy-config, arch/parisc/busy-config,
  arch/parisc64/busy-config, arch/ppc/busy-config, arch/ppc64/busy-config,
  arch/sparc/busy-config, arch/sparc64/busy-config, arch/x86/busy-config,
  arch/x86_64/busy-config, defaults/busy-config, netboot/linuxrc.x:
  Enable CONFIG_FEATURE_PREFER_APPLETS busybox option export PATH at top of
  netboot linuxrc

  07 Dec 2008; Andrew Gaffney <agaffney@gentoo.org> gen_initramfs.sh,
  netboot/linuxrc.x:
  Move all netboot logic from catalyst into gk

  07 Dec 2008; Andrew Gaffney <agaffney@gentoo.org> defaults/udhcpc.scripts,
  gen_cmdline.sh, gen_determineargs.sh, netboot/linuxrc.x:
  Initial support for --netboot option integrate functionality from netboot
  udhcpc.scripts into default one

  04 Dec 2008; Chris Gianelloni <wolf31o2@wolf31o2.org> genkernel:
  Bumping version for release.
