@@ -134,9 +134,6 @@ DEFAULT_KERNEL_SOURCE="/usr/src/linux"
 # arch/%%ARCH%%/kernel-config-${VER}.${PAT} !)
 # DEFAULT_KERNEL_CONFIG="${GK_SHARE}/arch/%%ARCH%%/kernel-config"
 
-# Configuration file for busybox
-BUSYBOX_CONFIG="${GK_SHARE}/arch/%%ARCH%%/busy-config"
-
 BUSYBOX_VER="VERSION_BUSYBOX"
 BUSYBOX_SRCTAR="${DISTDIR}/busybox-${BUSYBOX_VER}.tar.bz2"
 BUSYBOX_DIR="busybox-${BUSYBOX_VER}"
